Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36934

Desktop style animations are not running

    XMLWordPrintable

Details

    • qtdeclarative: 43f983350a548b1b663ea07a0e87e4cc58834214

    Description

      After the following changes in qtdeclarative:

      the desktop style animations (eg. indeterminate progress bar) are not running at all. QQuickItem::polish() doesn't call QQuickWindow::maybeUpdate() when appropriate anymore, because QQuickWindowPrivate::itemsToPolish now contains hidden items.

      Steps to reproduce:

      • run qtquick controls gallery
      • the progress bar is not animating
      • hover busy indicator (below slider) => animations start running

      Attachments

        For Gerrit Dashboard: QTBUG-36934
        # Subject Branch Project Status CR V

        Activity

          People

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes